--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -21,6 +21,9 @@ def flutterVersionName = localProperties.getProperty('flutter.versionName')
 if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
+apply plugin: 'com.android.application'
+// Add the following line:
+apply plugin: 'com.google.gms.google-services'
 
 android {
     namespace "com.example.campusbuzz"
