--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   firebase_core_platform_interface: ^4.8.0
   firebase_database: ^10.2.5
   firebase_messaging: ^14.6.6
+  
+
   flutter:
     sdk: flutter
   carousel_slider: ^4.2.1
@@ -47,6 +49,10 @@ dependencies:
   app_settings: ^5.0.0
   cloud_firestore: ^4.9.1
   flutter_riverpod: ^2.4.0
+  geolocator: ^10.1.0
+  geocoding: ^2.1.1
+  
+  
   
 #   flutter_native_splash: ^2.3.2
 
