some more changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -117,6 +117,8 @@ flutter:
     - images/festt.png
     - images/sportt.png
     - images/techh.png
+    - images/f1.jpg
+    - images/f2.jpg
 
 
 
